# tp-comfy

./: .gitignore  Dockerfile  Image Generation.json  Makefile  README.MD  docker-compose.yaml  extra_model_paths.yaml  pyproject.toml
scripts/: add_model.sh  add_node.sh  download_nodes.sh
services/comfy/: Dockerfile  entrypoint.sh  extra_model_paths.yaml  python_packages.txt
services/comfy_simple/: Dockerfile  entrypoint.sh  extra_model_paths.yaml  python_packages.txt
services/download/: entrypoint.sh  models.txt
services/download_simple/: Dockerfile  entrypoint.sh  models.txt
setup/: add_model.py  add_model.sh  add_node.py  add_node.sh  detect_gpu.py  download_models.py  download_nodes.py  download_nodes.sh  models.txt  models.yaml  nodes.txt  nodes.yaml
